Created barebones skeleton for website.

--- a/website/index.html
+++ b/website/index.html
@@ -6,6 +6,23 @@
     <title>My first website</title>
 </head>
 <body>
-    Drink water while and after working out.
+
+    <!--This is an example comment-->
+    <h1>My website</h1>
+    <hr>
+    <h1>Drink water while and after working out.</h1>
+    <br>
+    <h2>Drink water while and after working out.</h2>
+    <br>
+    <h3>Drink water while and after working out.</h3>
+    <br>
+    <h4>Drink water while and after working out.</h4>
+    <br>
+    <h5>Drink water while and after working out.</h5>
+    <br>
+    <h6>Drink water while and after working out.</h6>
+    <br>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae qui dignissimos, fuga adipisci, sint perspiciatis hic magni veritatis iure doloremque, dolorum inventore molestiae officiis voluptatum quo maiores. Numquam, placeat consequatur.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae a assumenda quam iure consequuntur repellat eos, sapiente qui dolore perferendis maxime ex iusto exercitationem similique unde commodi animi, reprehenderit ab?</p>
 </body>
 </html>
