--- a/root/image_display/shop.html
+++ b/root/image_display/shop.html
@@ -7,5 +7,17 @@
 <body>
     <h1>Shop for cheap Chainsaws here!</h1>
     <h2>50% off!</h2>
+    <table>
+        <tr>
+            <th width="100">Red</th>
+            <th>Blue</th>
+            <th>Green</th>
+        </tr>
+        <tr>
+            <td>$100</td>
+            <td>$200</td>
+            <td>$300</td>
+        </tr>
+    </table>
 </body>
 </html>
