Added 'index.html' and 'in.md' for 'final' dir.

--- a/final/index.html
+++ b/final/index.html
@@ -1,4 +1,35 @@
 <!DOCTYPE html>
 <!--Final project in HTML that uses everything I have learned to create a website.-->
 <html>
+    <head>
+        <title>ANIMALS FOR SALE!!! 40% OFF!</title>
+    </head>
+
+    <body style="background-color:rgb(123, 223, 123)">
+        <h1 align="center">Livestock</h1>
+        <hr color="black">
+
+        <br>
+
+        <div align="center">
+            <button style="background-color:brown;color:white;border-radius:100px">Barn Livestock</button>
+            <p>Livestock that you would find at your typical run of the mill farm.</p>
+        </div>
+
+        <br>
+
+        <div align="center">
+            <button style="background-color:rgb(42, 157, 165);color:white;border-radius:100px">Household Pets</button>
+            <p>Animals that you would typically find in one's home.</p>
+        </div>
+        
+        <br>
+
+        <div align="center">
+            <button style="background-color:rgb(199, 29, 170);color:white;border-radius:100px">Exotic Animals</button>
+            <p>Animals from fairy tales and even zoos.</p>
+        </div>
+
+        <br>
+    </body>
 </html>
