Added target:_blank to href of buttons.

--- a/final/index.html
+++ b/final/index.html
@@ -12,21 +12,27 @@
         <br>
 
         <div align="center">
+            <a href="./subdir/ls.html" target="_blank">
             <button style="background-color:brown;color:white;border-radius:100px">Barn Livestock</button>
+            </a>
             <p>Livestock that you would find at your typical run of the mill farm.</p>
         </div>
 
         <br>
 
         <div align="center">
+            <a href="./subdir/hh.html" target="_blank">
             <button style="background-color:rgb(42, 157, 165);color:white;border-radius:100px">Household Pets</button>
+            </a>
             <p>Animals that you would typically find in one's home.</p>
         </div>
         
         <br>
 
         <div align="center">
+            <a href="./subdir/ea.html" target="_blank">
             <button style="background-color:rgb(199, 29, 170);color:white;border-radius:100px">Exotic Animals</button>
+            </a>
             <p>Animals from fairy tales and even zoos.</p>
         </div>
 
